--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^7.12.1"
+  },
+  "devDependencies": {
+    "dotenv": "^8.1.0"
   }
 }
