--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "idahack",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "fastify": "^2.8.0",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pg": "^7.12.1"
-  },
-  "devDependencies": {
-    "dotenv": "^8.1.0"
-  }
+    "name": "idahack",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "ejs": "~2.6.1",
+        "express": "~4.16.1",
+        "fastify": "^2.8.0",
+        "http-errors": "~1.6.3",
+        "morgan": "~1.9.1",
+        "pg": "^7.12.1"
+    },
+    "devDependencies": {
+        "dotenv": "^8.1.0"
+    }
 }
