--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
         "debug": "~2.6.9",
+        "dotenv": "^8.1.0",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
         "fastify": "^2.8.0",
         "http-errors": "~1.6.3",
         "morgan": "~1.9.1",
-        "pg": "^7.12.1",
-        "dotenv": "^8.1.0"
+        "pg": "^7.12.1"
     },
     "devDependencies": {}
 }
