--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "fastify": "^2.8.0",
         "http-errors": "~1.6.3",
         "morgan": "~1.9.1",
+        "opencage-api-client": "^0.5.0",
         "pg": "^7.12.1"
     },
     "devDependencies": {}
