--- a/activfi/package.json
+++ b/activfi/package.json
@@ -7,10 +7,12 @@
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
     "bootstrap": "^4.3.1",
+    "leaflet": "^1.5.1",
     "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
+    "react-leaflet": "^2.4.0",
     "react-scripts": "3.1.2",
     "reactstrap": "^8.0.1"
   },
